@@ -2,3 +2,4 @@ export CFLAGS="-O0 -g2 -I/usr/local/include -DSOFT_DIVS=1"
 export LDFLAGS=""
 export CC=colorgcc
 unset LD
+unset GP2XDEVDIR
