@@ -1,3 +1,7 @@
+2006-12-28 rixed@free.fr
+	* Many fixes (blend on GP2X).
+	* Many GL fixes for Egoboo port.
+
 2006-11-07 rixed@free.fr
 	* Many optimizations : divs in ARM asm, faster projections, GL_QUADS.
 
